syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message ThreeDModel {

    optional int64 id = 2;
    optional string name = 1;
    optional int64 created_time = 3;
    optional int64 data_set_id = 4;
    map<string, string> metadata = 5;
}

message ThreeDModelRevision {

    message Camera {
        repeated double target = 1;
        repeated double position = 2;
    }

    optional int64 id = 1;
    optional int64 file_id = 2;
    optional string status = 3;
    optional int64 thumbnail_threed_file_id = 4;
    optional string thumbnail_URL = 5;
    optional int64 asset_mapping_count = 6;
    optional int64 created_time = 7;
    optional bool published = 8;
    optional Camera camera = 9;
    repeated double rotation = 10;
    map<string, string> metadata = 11;
}

message ThreeDAvailableOutput {

    optional string format = 1;
    optional int32 version = 2;
    optional int64 blobId = 3;
}

message ThreeDNode {

    message BoundingBox {
        repeated double max = 1;
        repeated double min = 2;
    }

    message Properties {
        google.protobuf.Struct values = 1;
    }

    optional int64 id = 1;
    optional int64 treeIndex = 2;
    optional int64 parentId = 3;
    optional int64 depth = 4;
    optional string name = 5;
    optional int64 subtreeSize = 6;
    optional Properties properties = 7;
    optional BoundingBox boundingBox = 8;
}

